tests/ui/intrinsics/incorrect-read_via_copy-defn.stderr
error[E0658]: the `#[rustc_intrinsic]` attribute is used to declare intrinsics as function items
  --> $DIR/incorrect-read_via_copy-defn.rs:6:1
   |
LL | #[rustc_intrinsic]
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0133]: call to unsafe function `read_via_copy` is unsafe and requires unsafe function or block
  --> $DIR/incorrect-read_via_copy-defn.rs:2:5
   |
LL |     read_via_copy();
   |     ^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0133, E0658.
For more information about an error, try `rustc --explain E0133`.
